--- a/index.css
+++ b/index.css
@@ -2,23 +2,29 @@ body{
     font-family: arial ;
     background-color: hsl(210, 16%, 85%);
 }
-
-form{
-    background-color: aliceblue;
-    text-align: center;
-    max-width: 350px;
-    margin: auto;
-    padding: 21px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 15px hsla(0, 0%, 18%, 0.599);
-}
-.h1{
-    color: hsl(240, 68%, 38%);
-    text-transform: uppercase;
-    filter: drop-shadow(0 0 5px rgb(26, 45, 170));
+ button{
+    margin-top: 27px;
+    border: none;
+    border-radius: 10px;
+    font-size: 15px;
+    padding: 8px 15px;
+    background-color: rgba(13, 113, 21, 0.707);
     font-weight: bold;
+    color: aliceblue;
+    transform: background-color 0.25s;
 }
-.textBox{
+button:hover{
+    background-color: rgb(29, 176, 73);
+}
+h1{
+    color: hsla(143, 87%, 21%, 0.822);
+    text-transform: uppercase;
+    filter: drop-shadow(0 0 5px rgb(6, 161, 42));
+    font-weight: bold;
+    margin-left: 26px;
+  
+}
+input{
     font-size: 1.2em;
     text-align: center;
     padding: 6px;
@@ -26,24 +32,22 @@ form{
     border-radius: 15px;
 }
 .label{
-    font-size: 1.1em;
+    font-size: 1.8em;
     font-weight: bold;
 }
-.submit{
-    margin-top: 27px;
-    border: none;
+#DiceResult{
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 25px;
+  
+
+}
+#DiceImages img{
+    width: 150px;
+    margin: 5px;
     border-radius: 10px;
-    font-size: 20px;
-    padding: 8px 15px;
-    background-color: brown;
-    font-weight: bold;
-    color: aliceblue;
-    transform: background-color 0.25s;
+
 }
-.submit:hover{
-    background-color: rgb(172, 71, 71);
-}
-p{
-    font-size: 20px;
-    font-weight: bold;
+.form{
+    text-align: center;
 }
